<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.example.apollomessagemanager.AddNumberFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_30">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_22"
                android:background="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_number"
                android:textColor="@color/page_title_text_color"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_20"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintTop_toBottomOf="@id/backIv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/inputLayout" />

            <LinearLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_50"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/titleTv">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp_getFullNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_hintExampleNumber="true"
                    app:ccp_selectionMemoryTag="getFullNumber" />

                <EditText
                    android:id="@+id/phoneNumberEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_n"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_50"
                android:layout_marginBottom="@dimen/button_bottom_margin"
                android:backgroundTint="@color/colorPrimary"
                android:padding="@dimen/button_padding"
                android:text="@string/btnSave"
                android:textSize="@dimen/text_size"
                app:layout_constraintTop_toBottomOf="@id/inputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
