<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_3"
    android:layout_marginTop="@dimen/margin_3"
    android:layout_marginEnd="@dimen/margin_2"
    android:layout_marginBottom="@dimen/margin_3">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/corner_radius_10"
        android:padding="@dimen/margin_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <CheckBox
                    android:id="@+id/checkbox_select_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="@dimen/margin_10"
                    app:layout_constraintVertical_bias="0.5" /> <!-- Center vertically -->

                <TextView
                    android:id="@+id/contactTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:paddingTop="@dimen/padding_14"
                    android:paddingBottom="@dimen/padding_14"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/checkbox_select_contact"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" /> <!-- Center vertically -->

                <LinearLayout
                    android:id="@+id/buttonContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/editTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:text="@string/edit_btn"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_18" />

                    <TextView
                        android:id="@+id/deleteTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:text="@string/delete_btn"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_18" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
