<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.example.apollomessagemanager.EditContactNumberFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_22"
                android:background="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_22"
            android:layout_marginRight="@dimen/margin_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backIv">

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_contact_info"
                android:textColor="@color/page_title_text_color"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/rounded_editetext_bg"
                android:textColorHint="@color/hint_text_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTv"
                app:passwordToggleTint="@color/hint_text_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:paddingLeft="@dimen/padding_14"
                    android:textColor="@color/page_title_text_color"
                    android:textColorHint="@color/page_title_text_color"
                    android:textSize="@dimen/text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_35"
                android:layout_marginBottom="@dimen/button_bottom_margin"
                android:backgroundTint="@color/colorPrimary"
                android:padding="@dimen/button_padding"
                android:text="@string/save"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/num"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>